--- a/MES.UI/Layout/NavMenu.razor
+++ b/MES.UI/Layout/NavMenu.razor
@@ -15,23 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="overview">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Overview
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="partinformation">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Part Details
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="todo">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ToDo
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="partoverview">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Part Overview
+            <NavLink class="nav-link" href="rework">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Rework
             </NavLink>
         </div>
     </nav>
