Working on front end.

--- a/MES.UI/Components/PartDetails.razor
+++ b/MES.UI/Components/PartDetails.razor
@@ -3,7 +3,7 @@
 @if (Part != null)
 {
     <div class="card shadow-sm" style="width: 20rem;">
-        <div class="card-header bg-primary text-white">
+        <div class="card-header top-row-color text-white">
             Part Details
         </div>
         <div class="card-body">
