--- a/MES.UI/Components/ProgressIndicator.razor
+++ b/MES.UI/Components/ProgressIndicator.razor
@@ -2,7 +2,7 @@
 @if (IsVisible)
 {
     <div class="d-flex justify-content-center">
-        <div class="spinner-border text-primary" role="status">
+        <div class="spinner-border spinner-border-color text-primary" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
     </div>
