--- a/MES.UI/Layout/MainLayout.razor
+++ b/MES.UI/Layout/MainLayout.razor
@@ -5,7 +5,7 @@
     </div>
 
     <main>
-        <div class="top-row px-4 navbar-dark">
+        <div class="top-row px-4 top-row-color">
             
         </div>
 
