--- a/MES.UI/Layout/NavMenu.razor
+++ b/MES.UI/Layout/NavMenu.razor
@@ -21,12 +21,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="partinformation">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Part Details
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Part Details
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rework">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Rework
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Rework
             </NavLink>
         </div>
     </nav>
